tests/compile_fail/resolver_duplicate_definition.stderr
error: Identifier "meters" defined multiple times.
  --> tests/compile_fail/resolver_duplicate_definition.rs:11:10
   |
11 |     unit meters: Length;
   |          ^^^^^^
12 |     #[base(Length)]
13 |     unit meters: Length;
   |          ^^^^^^
